# TNFSH-Scoreboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
src/: config.py  const.py  routers.py  server.py
src/handlers/: absence.py  base.py  exam.py  forgetpw.py  graduation.py  index.py  leave.py  login.py  resetpw.py  reward.py  term.py
src/services/: api.py  cache.py  login.py  service.py  session.py  utils.py
src/static/: manifest.json  route.js  sw.js  swiped-events.min.js
src/static/template/: about.html  absence.html  exam.html  forget-password.html  goto-login.html  graduation-credit.html  index.html  leave-request.html  login.html  manifest.json  newexam.html  pwa-installation-guide.html  remote-server-error.html  reset-password.html  reward.html  subject-absence-count.html  term.html
src/utils/: __init__.py  error.py  htmlgen.py  validate.py
